# matter_alif

.github/workflows/: bloat_check.yaml  build.yaml  cancel_workflows_for_pr.yaml  check-data-model-directory-updates.yaml  chef.yaml  cirque.yaml  darwin-tests.yaml  darwin.yaml  examples-ameba.yaml  examples-asr.yaml  examples-bouffalolab.yaml  examples-cc13xx_26xx.yaml  examples-cc32xx.yaml  examples-efr32.yaml  examples-esp32.yaml  examples-infineon.yaml  examples-linux-arm.yaml  examples-linux-imx.yaml  examples-linux-standalone.yaml  examples-mbed.yaml  examples-mw320.yaml  examples-nrfconnect.yaml  examples-nxp.yaml  examples-openiotsdk.yaml  examples-qpg.yaml  examples-stm32.yaml  examples-telink.yaml  examples-tizen.yaml  full-android.yaml  java-tests.yaml  minimal-build.yaml  qemu.yaml  smoketest-android.yaml  stale.yaml  tests.yaml  zap_templates.yaml
config/alif/: README.md
config/alif/chip-gn/: .gn  BUILD.gn  args.gni
config/alif/chip-gn/toolchain/: BUILD.gn
config/alif/chip-module/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.features  Kconfig.hci_rpmsg.defaults  Kconfig.hci_rpmsg.root  Kconfig.mcuboot.defaults  Kconfig.mcuboot.root  Kconfig.multiprotocol_rpmsg.defaults  generate_factory_data.cmake
config/standalone/: CHIPProjectConfig.h
config/zephyr/: Kconfig  zephyr-util.cmake
examples/chip-tool/: .gn
examples/chip-tool/include/: CHIPProjectAppConfig.h
examples/light-switch-app/alif/: CMakeLists.txt  Kconfig  prj.conf
examples/light-switch-app/alif/main/: AppTask.cpp  BindingHandler.cpp  LightSwitch.cpp  ShellCommands.cpp
examples/light-switch-app/alif/main/include/: AppEvent.h  AppTask.h  BindingHandler.h  LightSwitch.h  ShellCommands.h
examples/lighting-app/alif/: CMakeLists.txt  Kconfig  prj.conf
examples/lighting-app/alif/boards/: alif_b1_fpga_rtss_he_ble.conf
examples/platform/alif/util/: MatterMain.cpp  (+2 more)
scripts/tools/alif/: factorydata_gen.py
src/app/: SimpleSubscriptionResumptionStorage.h  chip_data_model.cmake
src/inet/: IPAddress.h  ZephyrSocket.h
src/lib/core/: CHIPConfig.h
src/platform/: BUILD.gn  device.gni
src/platform/Zephyr/: SysHeapMalloc.cpp
src/platform/alif/: BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceInstanceInfoProviderImpl.h  FactoryDataParser.c  FactoryDataParser.h  FactoryDataProvider.cpp  FactoryDataProvider.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.h  NFCManagerImpl.h  PlatformManagerImpl.h  SystemPlatformConfig.h  ThreadStackManagerImpl.h  args.gni  zephyr-mbedtls-config.h
src/platform/logging/: BUILD.gn
zephyr/: module.yml
(+10 files in other folders)
